--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "firebase": "^4.8.2",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
+    "react-native-elements": "^0.19.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.1.0",
+    "babel-preset-react-native": "^4.0.0",
+    "jest": "^22.1.2",
+    "react-test-renderer": "^16.2.0"
   }
 }
