--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
     "react-native-elements": "^0.19.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-gifted-chat": "^0.3.0",
+    "react-native-image-picker": "^0.26.7",
     "react-native-router-flux": "^4.0.0-beta.28",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
