--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-persist": "^5.4.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
